# tria

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build-test.yml
apps/: CMakeLists.txt
apps/fonttest/: main.cpp
apps/fonttest_data/graphics/: circle.gfx  circle_red.gfx  lines.gfx  lines_gray.gfx  lines_red.gfx
apps/fonttest_data/shaders/: blue.frag  circle.vert  gray.frag  lines.vert  red.frag  tex.frag  tex_red.frag  white.frag
apps/fonttest_data/shaders/include/: input.glsl  utils.glsl
apps/sandbox/: main.cpp
apps/sandbox_data/graphics/: bunny.gfx  corset.gfx  cube.gfx  dragon.gfx  grid.gfx  head.gfx  particle.gfx  sky.gfx  wirecube.gfx
apps/sandbox_data/shaders/: grid.frag  grid.vert  obj.vert  obj_nrm.frag  obj_tex.frag  obj_tex_nrm.frag  particle.vert  sky.frag  sky.vert
apps/sandbox_data/shaders/include/: common.glsl  input.glsl  instance.glsl  utils.glsl
apps/sandbox_data/textures/: checker.ppm  white.ppm
cmake/: FindPackageLibHelper.cmake  Findxcb-xkb.cmake  Findxcb.cmake
data/: CMakeLists.txt  circle.gfx  particle.gfx  quad.gfx  triangle.gfx
data/shaders/: discard.frag  particle.vert  plain.frag  plain.vert  quad.vert  triangle.vert
data/textures/: circle.tga  circle_glow.tga
include/: defines.hpp  fs.hpp
include/log/: api.hpp  level.hpp  logger.hpp  macro.hpp  message.hpp  metadata.hpp  param.hpp  sink.hpp
include/pal/: platform.hpp  platform.linux.xcb.hpp  platform.win32.hpp  utils.hpp  window.hpp  window.linux.xcb.hpp  window.win32.hpp
include/pal/err/: display_protocol_err.hpp  window_err.hpp
include/tria/: config.hpp.in
include/tria/asset/: asset.hpp  asset_kind.hpp  database.hpp  font.hpp  graphic.hpp  image.hpp  mesh.hpp  raw_asset.hpp  shader.hpp  texture.hpp
include/tria/asset/err/: asset_load_err.hpp  asset_type_err.hpp  font_ttf_err.hpp  graphic_err.hpp  json_err.hpp  mesh_err.hpp  shader_spv_err.hpp  texture_ppm_err.hpp  texture_tga_err.hpp
include/tria/gfx/: canvas.hpp  context.hpp  surface.hpp
include/tria/gfx/err/: asset_err.hpp  driver_err.hpp  gfx_err.hpp  graphic_err.hpp  shader_err.hpp  sync_err.hpp
include/tria/log/: api.hpp  level.hpp  logger.hpp  macro.hpp  message.hpp  metadata.hpp  param.hpp  sink.hpp
include/tria/log/err/: log_file_err.hpp
include/tria/math/: base64.hpp  box.hpp  box_io.hpp  mat.hpp  mat_io.hpp  pod_vector.hpp  pod_vector_io.hpp  quat.hpp  quat_io.hpp  rnd.hpp  rng.hpp  utils.hpp  vec.hpp  vec_io.hpp
include/tria/pal/: interrupt.hpp  interupt.hpp  key.hpp  native.hpp  platform.hpp  platform.linux.xcb.hpp  platform.win32.hpp  utils.hpp  window.hpp  window.linux.xcb.hpp  window.win32.hpp
include/tria/pal/err/: display_protocol_err.hpp  platform_err.hpp  window_err.hpp
include/tria/scene/: cam3d.hpp
scripts/: build.ps1  build.sh  configure.ps1  configure.sh  test.sh
src/: CMakeLists.txt
src/log/: json_sink.cpp  logger.cpp  param.cpp  pretty_sink.cpp
src/log/internal/: charconv.hpp  file_sink.hpp  str_write.hpp
src/pal/: platform.linux.xcb.cpp  platform.win32.cpp  utils.linux.cpp  utils.win32.cpp  window.linux.xcb.cpp  window.win32.cpp
src/tria/asset/: database.cpp  database_impl.cpp  database_impl.hpp
src/tria/asset/internal/: font_ttf_loader.cpp  graphic_loader.cpp  image_ppm_loader.cpp  json.cpp  json.hpp  loader.cpp  loader.hpp  mesh_builder.hpp  mesh_obj_loader.cpp  mesh_utils.cpp  mesh_utils.hpp  raw_asset_loader.cpp  shader_loader.cpp  shader_spv_loader.cpp  texture_ppm_loader.cpp  texture_tga_loader.cpp
src/tria/gfx_vulkan/: canvas.cpp  context.cpp  native_canvas.cpp  native_canvas.hpp  native_context.cpp  native_context.hpp  native_surface.cpp  native_surface.hpp  surface.cpp
src/tria/gfx_vulkan/internal/: asset_resource.hpp  buffer.cpp  buffer.hpp  debug_messenger.cpp  debug_messenger.hpp  debug_utils.hpp  descriptor_manager.cpp  descriptor_manager.hpp  device.cpp  device.hpp  forward_technique.cpp  forward_technique.hpp  graphic.cpp  graphic.hpp  graphic_manager.cpp  graphic_manager.hpp  image.cpp  image.hpp  image_sampler.cpp  image_sampler.hpp  memory_pool.cpp  memory_pool.hpp  mesh.cpp  mesh.hpp  pipeline_cache.cpp  pipeline_cache.hpp  raw_asset.cpp  raw_asset.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  shader_asset.cpp  shader_asset.hpp  shader_manager.cpp  shader_manager.hpp  stat_recorder.cpp  stat_recorder.hpp  (+12 more)
src/tria/log/: json_sink.cpp  logger.cpp  param.cpp  pretty_sink.cpp
src/tria/log/internal/: file_sink.hpp  str_write.hpp
src/tria/math/: base64.cpp  rnd.cpp  rng.cpp  utils.cpp
src/tria/pal/: interrupt.linux.cpp  interrupt.win32.cpp  interupt.linux.cpp  interupt.win32.cpp  native_platform.win32.cpp  native_platform.win32.hpp  native_platform.xcb.cpp  native_platform.xcb.hpp  platform.linux.xcb.cpp  platform.win32.cpp  platform.xcb.cpp  utils.linux.cpp  utils.win32.cpp  window.linux.xcb.cpp  window.win32.cpp  window.xcb.cpp
src/tria/pal/internal/: win32_utils.hpp  win_input.hpp  window_input.hpp  xcb_utils.hpp  xcb_xkb_include.hpp
tests/: CMakeLists.txt
tests/tria/asset/: database_test.cpp  font_ttf_test.cpp  graphic_test.cpp  image_ppm_test.cpp  mesh_obj_test.cpp  shader_spv_test.cpp  shader_test.cpp  texture_ppm_test.cpp  texture_tga_test.cpp  utils.cpp  utils.hpp
tests/tria/log/: level_test.cpp  logger_test.cpp  mock_sink.hpp  param_test.cpp
tests/tria/math/: base64_test.cpp  box_test.cpp  mat_test.cpp  pod_vector_test.cpp  quat_test.cpp  rnd_test.cpp  rng_test.cpp  utils_test.cpp  vec_test.cpp
tests/tria/pal/: utils_test.cpp
